--- a/src/Components/Quiz/quiz.css
+++ b/src/Components/Quiz/quiz.css
@@ -9,7 +9,6 @@
   background-color: whitesmoke;
   border-radius: 10px;
   color: #262626;
-  box-shadow: 1px 2px 1px 4px #fff;
 }
 .container h1 {
   font-family: "Lobster", sans-serif;
@@ -94,4 +93,176 @@
   font-weight: 900;
   color: red;
   font-style: italic;
+}
+
+@media (min-width: 320px) and (max-width: 359px) {
+  body {
+    background-image: linear-gradient(#d8c7ff, #19006c);
+  }
+  .container {
+    width: 200px;
+    height: 500px;
+    margin-top: 35px;
+  }
+
+  .container h1 {
+    font-size: 35px;
+  }
+  .container h2 {
+    font-size: 25px;
+  }
+  .container ul li {
+    font-size: 17px;
+    padding-left: 3px;
+    height: 30px;
+  }
+}
+@media (min-width: 360px) and (max-width: 374px) {
+  body {
+    background-image: linear-gradient(#d8c7ff, #19006c);
+  }
+  .container {
+    width: 200px;
+    margin-top: 25px;
+    height: 510px;
+  }
+
+  .container h1 {
+    font-size: 35px;
+  }
+  .container h2 {
+    font-size: 25px;
+  }
+  .container ul li {
+    font-size: 17px;
+    padding-left: 3px;
+    height: 30px;
+  }
+  .container .button_next {
+    width: 100px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 389px) {
+  body {
+    background-image: linear-gradient(#d8c7ff, #19006c);
+  }
+  .container {
+    width: 250px;
+    margin-top: 25px;
+  }
+
+  .container h1 {
+    font-size: 35px;
+  }
+  .container h2 {
+    font-size: 25px;
+  }
+  .container ul li {
+    font-size: 17px;
+    padding-left: 3px;
+    height: 35px;
+  }
+  .container .button_next {
+    width: 100px;
+  }
+}
+@media (min-width: 390px) and (max-width: 413px) {
+  body {
+    background-image: linear-gradient(#d8c7ff, #19006c);
+  }
+  .container {
+    width: 260px;
+    margin-top: 75px;
+    height: 600px;
+  }
+
+  .container h1 {
+    font-size: 35px;
+  }
+  .container h2 {
+    font-size: 25px;
+  }
+  .container ul li {
+    font-size: 17px;
+    padding-left: 3px;
+    height: 45px;
+  }
+  .container .button_next {
+    width: 100px;
+  }
+}
+
+@media (min-width: 414px) and (max-width: 767px) {
+  body {
+    background-image: linear-gradient(#d8c7ff, #19006c);
+  }
+  .container {
+    width: 280px;
+    margin-top: 65px;
+    height: 560px;
+  }
+
+  .container h1 {
+    font-size: 45px;
+  }
+  .container h2 {
+    font-size: 25px;
+  }
+  .container ul li {
+    font-size: 17px;
+    padding-left: 3px;
+    height: 35px;
+  }
+  .container .button_next {
+    width: 100px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+  body {
+    background-image: linear-gradient(#d8c7ff, #19006c);
+  }
+  .container {
+    width: 600px;
+    margin-top: 135px;
+    height: 650px;
+  }
+
+  .container h1 {
+    font-size: 45px;
+  }
+  .container h2 {
+    font-size: 25px;
+  }
+  .container ul li {
+    font-size: 17px;
+    padding-left: 3px;
+    height: 47px;
+  }
+  .container .button_next {
+    width: 250px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1200px) {
+  .container {
+    width: 800px;
+    margin-top: 135px;
+    height: 700px;
+  }
+
+  .container h1 {
+    font-size: 45px;
+  }
+  .container h2 {
+    font-size: 30px;
+  }
+  .container ul li {
+    font-size: 19px;
+    padding-left: 3px;
+    height: 57px;
+  }
+  .container .button_next {
+    width: 250px;
+  }
 }
